<resources>
    <string name="app_name">Media Manager</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_music_movies_tv_shows_screen">MusicMoviesTvShowsScreen</string>
    <string name="title_activity_music_movies_tvshows">MusicMoviesTVShows</string>
    <string name="go_music">Add Music</string>
    <string name="go_movie">Add Movie</string>
    <string name="go_tv_show">Add TV Show</string>
    <string name="movies_vhs">VHS</string>
    <string name="movie_title">Movie Title</string>
    <string name="dvd">DVD</string>
    <string name="director_name">Director Name</string>
    <string name="running_time_in_minutes">Running Time in Minutes</string>
    <string name="rating">Rating</string>
    <string name="description">Description</string>
    <string name="add_actors">Add Actors</string>
    <string name="add_new_movie">Add New Movie</string>
    <string name="plus_sign">plus sign</string>
    <string name="cd">CD</string>
    <string name="cassette">Cassette</string>
    <string name="record">Record</string>
    <string name="album_title">Album Title</string>
    <string name="artist_name">Artist Name</string>
    <string name="album_producer">Album Producer</string>
    <string name="album_length_in_minutes">Album Length in Minutes</string>
    <string name="add_tracks">Add Tracks</string>
    <string name="add_new_music">Add New Music</string>
    <string name="bluray">BluRay</string>
    <string name="show_title">Show Title</string>
    <string name="add_seasons">Add Seasons</string>
    <string name="add_new_tv_show">Add New TV Show</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="director_">Director:</string>
    <string name="running_time">Running Time:</string>
    <string name="actors">Actors:</string>
    <string name="description_">Description:</string>
    <string name="movie_title_">Movie Title:</string>
    <string name="rating_">Rating:</string>
    <string name="director">Director</string>
    <string name="album_title_">Album Title:</string>
    <string name="tracks_">Tracks:</string>
    <string name="producer_">Producer:</string>
    <string name="artist_name_">Artist Name:</string>
    <string name="length_">Length:</string>
    <string name="seasons_">Seasons:</string>
    <string name="title_">Title:</string>
    <string name="actors_">Actors:</string>
    <string name="title">Title</string>
    <string name="you_have_no_stored_media">You have no stored media...</string>
    <string name="let_s_get_started">Let\'s get started!</string>
    <string name="go">GO</string>
    <string name="browsing">Browsing</string>
    <string name="your">Your</string>
    <string name="media">Media</string>
    <string name="music">Music</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">TV Shows</string>
    <string name="browse_by">Browse By:</string>
    <string name="actor">Actor</string>
    <string name="alphabetically">Alphabetically</string>
    <string name="artist">Artist</string>
    <string name="return_to_home">Return To Home</string>
    <string name="track">Track</string>
    <string name="season">Season</string>
    <string name="view_reports">View Reports</string>
    <string name="enter_search_text_here">Enter Search Text Here</string>
    <string-array name="media_array">
        <item>Select Media Type</item>
        <item>Music</item>
        <item>Movies</item>
        <item>TV Shows</item>
        <item>Tracks</item>
        <item>Actors</item>
        <item>Seasons</item>
    </string-array>
</resources>

