<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailedMusicScreen">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#37D5C4"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Music Details"
        app:titleTextColor="#FFFFFF" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/musicTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="30dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="0dp"
                    android:text="@string/album_title_"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/musicTitleEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/album_title"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/musicArtist"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="30dp"
                    android:paddingEnd="0dp"
                    android:text="@string/artist_name_"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/musicArtistEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/artist_name"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/musicLength"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="30dp"
                    android:paddingEnd="0dp"
                    android:text="@string/length_"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/musicLengthEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/album_length_in_minutes"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/musicProducer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="30dp"
                    android:paddingEnd="0dp"
                    android:text="@string/producer_"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/musicProducerEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/album_producer"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/musicDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="30dp"
                    android:paddingEnd="0dp"
                    android:text="@string/description_"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/musicDescEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/description"
                    android:inputType="textPersonName" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/addTracksEditScreen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="150dp"
                        android:layout_weight="1"
                        android:text="@string/add_tracks"
                        android:textSize="18sp" />

                    <ImageButton
                        android:id="@+id/addTracksButtonEditScreen"
                        android:layout_width="5dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="30dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/plus_sign"
                        app:srcCompat="@android:drawable/ic_input_add" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/addTracksLayoutEditScreen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:orientation="vertical"></LinearLayout>

                <TextView
                    android:id="@+id/musicTracks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="30dp"
                    android:paddingEnd="0dp"
                    android:text="@string/tracks_"
                    android:textSize="18sp" />

                <LinearLayout
                    android:id="@+id/tracksLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"></LinearLayout>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/editMusicButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/edit" />

            <Button
                android:id="@+id/deleteMusicButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/delete" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>