<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailedMovieScreen">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#37D5C4"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Movie Details"
        app:titleTextColor="#FFFFFF" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="675dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:fillViewport="true">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/movieTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="30dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="0dp"
                    android:text="@string/movie_title_"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/movieTitleEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/movie_title"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/movieDirector"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="30dp"
                    android:paddingEnd="0dp"
                    android:text="@string/director"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/movieDirectorEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/director_"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/movieLength"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="30dp"
                    android:paddingEnd="0dp"
                    android:text="@string/running_time"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/movieLengthEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/running_time_in_minutes"
                    android:inputType="number|textPersonName"
                    android:paddingStart="30dp"
                    android:paddingEnd="0dp" />

                <TextView
                    android:id="@+id/movieRating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="30dp"
                    android:paddingEnd="0dp"
                    android:text="@string/rating_"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/movieRatingEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/rating"
                    android:inputType="textPersonName"
                    android:paddingStart="30dp"
                    android:paddingEnd="0dp" />

                <TextView
                    android:id="@+id/movieDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="30dp"
                    android:paddingEnd="0dp"
                    android:text="@string/description_"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/movieDescEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/description"
                    android:inputType="textPersonName"
                    android:paddingStart="30dp"
                    android:paddingEnd="0dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/addActorsEditScreen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="200dp"
                        android:text="@string/add_actors"
                        android:textSize="18sp" />

                    <ImageButton
                        android:id="@+id/addActorsButtonMovieEditScreen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="30dp"
                        android:contentDescription="@string/plus_sign"
                        app:srcCompat="@android:drawable/ic_input_add" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/addActorsMovieLayoutEditScreen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:orientation="vertical"></LinearLayout>

                <TextView
                    android:id="@+id/movieActors"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="30dp"
                    android:paddingEnd="0dp"
                    android:text="@string/actors"
                    android:textSize="18sp" />

                <LinearLayout
                    android:id="@+id/movieActorsLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"></LinearLayout>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/editMovieButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/edit" />

            <Button
                android:id="@+id/deleteMovieButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/delete" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>